--- a/assets/mascotas.css
+++ b/assets/mascotas.css
@@ -4,6 +4,11 @@ html {
   margin: 0;
   padding: 0;
 }
+
+body{
+  box-sizing: border-box;
+  display: grid;
+}
 header {
   background-position: center;
   text-align: center;
@@ -15,7 +20,7 @@ header {
 
 img{
   border-radius: 25%;
-  position: relative;
+
  
 }
 
@@ -54,15 +59,5 @@ width: 100%;
 border-collapse: collapse;
 border: 3px solid rgb(108, 233, 92);
 }
-table tr td {
-width: 10%;
-white-space: nowrap;
-}
-
-th,
-td {
-padding: 10px;
-}
-
 
 
