--- a/assets/style.css
+++ b/assets/style.css
@@ -62,3 +62,21 @@ h4 {
   gap: 2rem;
 
 }
+.objeto {
+  margin: 10px;
+  border: 1px solid #ccc;
+  padding: 10px;
+  width: 200px;
+  text-align: center;
+}
+
+.parrafo-oculto {
+  display: none;
+}
+
+.objeto:hover .parrafo-oculto {
+  display: block;
+}
+p {font-family: 'arial', cursive;
+  size: 20;
+  color: gray;}
