--- a/assets/mascotas.css
+++ b/assets/mascotas.css
@@ -8,6 +8,7 @@ html {
 body{
   box-sizing: border-box;
   display: grid;
+
 }
 header {
   background-position: center;
@@ -18,9 +19,11 @@ header {
   background-image: linear-gradient(359.8deg, rgba(252, 255, 222, 1) 2.2%, rgb(136, 201, 116) 99.3%);
 }
 
+
 img{
   border-radius: 25%;
-
+  width: 200px;
+  height: 200px;
  
 }
 
@@ -59,5 +62,4 @@ width: 100%;
 border-collapse: collapse;
 border: 3px solid rgb(108, 233, 92);
 }
-
 
