--- a/assets/style.css
+++ b/assets/style.css
@@ -32,6 +32,7 @@ h1 {
   font-family: 'Pacifico', cursive;
   size: 130px;
   color: rgb(20, 119, 106);
+  text-align: center;
 }
 
 h2 {
@@ -80,3 +81,11 @@ h4 {
 p {font-family: 'arial', cursive;
   size: 20;
   color: gray;}
+
+.container-2 {
+  position: relative;
+  display: flex;
+  box-sizing: border-box;
+  padding-inline-start: 10%;
+}
+
