--- a/assets/mascotas.css
+++ b/assets/mascotas.css
@@ -13,7 +13,7 @@ body {
 
 header {
   text-align: center;
-  height: 90%;
+  height: 100%;
   position: sticky;
   border: 1px solid red;
   background-image: linear-gradient(359.8deg, rgba(252, 255, 222, 1) 2.2%, rgb(136, 201, 116) 99.3%);
@@ -49,9 +49,9 @@ main {
   text-align: center;
 }
 
-
 td img {
-    padding-inline: 5px;
+    text-align: center;
+
     border-radius: 40%;
     width: 200px;
     height: 200px;
@@ -64,7 +64,9 @@ td p{
 }
 
 table {
+  border-collapse: collapse;
   padding: 35px;
+  width: 100%;
 }
 
 .hidden {
