--- a/assets/style.css
+++ b/assets/style.css
@@ -13,7 +13,7 @@ body {
   flex-direction: wrap;
   flex-direction: column;
   position: relative ;
-  height: 100%;
+  height: 100svh;
   box-sizing: border-box;
 }
 
@@ -25,16 +25,16 @@ main {
 }
 img{
   align-items: center;
-
-  width: 250px;
+  width: 300px;
 }
 
 footer {
-  position: relative;
-
-  height: 200%;
+  height: 100%;
 }
-
+header picture img{
+  width: 450px;
+  height: 300px;
+}
 h1 {
   text-align: center;
   font-family: 'Pacifico', cursive;
