--- a/assets/style.css
+++ b/assets/style.css
@@ -5,14 +5,13 @@
 html {
   margin: 0;
   padding: 0;
-
 }
 
 body {
-  display:grid;
+  display: grid;
   flex-direction: wrap;
   flex-direction: column;
-  position: relative ;
+  position: relative;
   height: 100svh;
   box-sizing: border-box;
 }
@@ -21,58 +20,46 @@ main {
   height: 100%;
   position: static;
   border: 0px solid rgb(0, 24, 238);
-
-}
-img{
-  align-items: center;
-  width: 300px;
 }
 
 footer {
-  height: 100%;
+  height: 100px;
 }
-header picture img{
-  width: 450px;
-  height: 300px;
+
+header img {
+  align-items: center;
+  width: 400px;
+  height: 250px;
 }
+
 h1 {
   text-align: center;
-  font-family: 'Pacifico', cursive;
+  font-family: "Pacifico", cursive;
   size: 130px;
   color: rgb(20, 119, 106);
   text-align: center;
 }
 
 h2 {
-  font-family: 'Pacifico', cursive;
+  font-family: "Pacifico", cursive;
   size: 30px;
   color: rgb(76, 23, 146);
 }
 
 h3 {
-  font-family: 'Pacifico', cursive;
+  font-family: "Pacifico", cursive;
   size: 30px;
   color: rgb(128, 52, 2);
 }
 
-
 h4 {
-  font-family: 'Courier New', Courier, monospace;
+  font-family: "Courier New", Courier, monospace;
   size: 20;
   color: gray;
-
-}
-
-.container picture {
-  display: inline-block;
-  background-color: hsl(180, 60%, 82%);
-
-  gap: 2rem;
-  box-sizing: border-box;
 }
 
 .objeto {
-  position:relative;
+  position: relative;
   display: inline-block;
   margin: 10px;
   border: 1px solid #ccc;
@@ -86,25 +73,40 @@ h4 {
 }
 
 .objeto:hover .parrafo-oculto {
-  display:grid;
+  display: grid;
 }
 
-p {font-family: 'arial', cursive;
+p {
+  font-family: "arial", cursive;
   size: 20;
-  color: gray;}
-
+  color: gray;
+}
 
 .container-2 {
-    position:static;
-    display: inline-block;
-    box-sizing: content-box;
-    padding-inline-start: 0%;
-  }
-
-
-.container-video{
-  display: -ms-flexbox;
-  padding-inline: 20px;
-  
+  display: flex;
+  position: relative;
+  display: inline-block;
+  box-sizing: content-box;
 }
 
+picture {
+  
+  align-items: center;
+  gap: 2rem;
+  height: 20px;
+}
+picture img {
+  height: 230px;
+  padding: 5px;
+}
+button{
+  background-color: azure;
+  border-bottom: 25px;
+  box-shadow: 5px 5px 5px #888
+ 
+}
+
+.container-video {
+  display: -ms-flexbox;
+  padding-inline: 20px;
+}
