--- a/assets/mascotas.css
+++ b/assets/mascotas.css
@@ -9,7 +9,7 @@ html {
 body {
   box-sizing: border-box;
   display: grid;
-  background-image: (359.8deg, rgba(252, 255, 222, 1) 2.2%, rgb(136, 201, 116) 99.3%);
+  background-image: (359.8deg, rgb(230, 248, 245) 2.2%, rgb(136, 201, 116) 99.3%);
 
 
 }
@@ -19,7 +19,7 @@ header {
   height: 100%;
   position: sticky;
   border: 0px solid red;
-  background-image: linear-gradient(359.8deg, rgba(252, 255, 222, 1) 2.2%, rgb(136, 201, 116) 99.3%);
+  background-image: linear-gradient(359.8deg, rgb(234, 250, 249) 2.2%, rgb(161, 218, 205) 99.3%);
 }
 
 header picture img {
@@ -43,7 +43,7 @@ header picture img {
   font-family: "Pacifico", cursive;
   
   background-color: #eee;
-  color: rgb(80, 0, 76);
+  color: rgb(76, 23, 146);
   display: block;
   padding: 1em;
   text-decoration: none;
