--- a/assets/style.css
+++ b/assets/style.css
@@ -20,8 +20,8 @@ main {
   height: 100%;
   position: static;
   border: 0px solid rgb(0, 24, 238);
+  padding: 25px 20px 25px 20px ;
 }
-
 footer {
   padding: 10;
   height: 100%;
@@ -31,6 +31,7 @@ header img {
   align-items: center;
   width: 300px;
   height: 100px;
+  gap: 2rem;
 }
 
 header picture img {
@@ -39,8 +40,6 @@ header picture img {
   height: auto;
 
 }
-
-
 
 h1 {
   text-align: center;
