--- a/assets/form.css
+++ b/assets/form.css
@@ -4,10 +4,10 @@
 form {
   margin: 0 auto;
   width: 400px;
-  
-  padding: 1em;
+  padding: 2em;
   border: 1px solid #ccc;
   border-radius: 1em;
+
 }
 div + div {
   margin-top: 1em;
@@ -43,4 +43,8 @@ button {
   font-size: 10px;
   background-color: rgb(194, 234, 198);
   margin-left: 0.5em;
+}
+footer{
+  box-sizing: border-box;
+  height: 50px;
 }
