--- a/assets/banner.css
+++ b/assets/banner.css
@@ -1,9 +1,14 @@
 .banner {
+    display: flex;
     position: relative;
     width: 100%;
-    height: 200px;
+    height: 250px;
     background-color: #f1f1f1;
     overflow: hidden;
+    background-image: url(https://img.freepik.com/free-vector/blue-fluid-background-frame_53876-99019.jpg?size=626&ext=jpg&ga=GA1.1.609444847.1699661775&semt=sph);
+    background-repeat: no-repeat;
+    background-size: cover;
+   
 }
 
 /* Estilos para la imagen de la mascota */
@@ -11,21 +16,13 @@
     position: relative;
     top: 50%;
     left: -200px; /* Inicialmente, la imagen está fuera del banner */
-    width: 100px;
-    height: auto;
+    width: 150px;
+    height: 230px;
     transform: translate(0%, -50%);
     animation: slide 7s linear infinite; /* La animación de desplazamiento */
+    margin-right: 20px
 }
 
-/* Estilos para el texto */
-.banner h1 {
-    position: absolute;
-    top: 50%;
-    left: 50%;
-    transform: translate(-50%, -50%);
-    font-size: 24px;
-    color: #c01414;
-}
 
 /* Animación de desplazamiento */
 @keyframes slide {
@@ -35,4 +32,8 @@
     100% {
         left: 100%; /* Termina fuera del banner */
     }
+}
+
+@media only screen and (max-width: 600px) {
+  
 }
