--- a/assets/headers.css
+++ b/assets/headers.css
@@ -1,23 +1,41 @@
 
-header {
-    font-size: clamp (1rem, 3vw + 0.2rem, 1rem);
-    position: sticky;
-    background-image: linear-gradient(359.8deg, rgba(252, 255, 222, 1) 2.2%, rgb(167, 248, 171) 99.3%);
-  
+header {  
+    background-image: url(https://img.freepik.com/free-vector/blue-fluid-background-frame_53876-99019.jpg?size=626&ext=jpg&ga=GA1.1.609444847.1699661775&semt=sph);
+    background-repeat: no-repeat;
+    background-size: cover;
+    padding: 1%;
+    position: fixed;
+    width: 100%;
+    display: flex;
+
 }
 
 
+header picture img {  
+  padding-left: 10%;
+  width: 20% ;
+  height: auto;
+  max-width: 100%; 
+
+}
+
+
+/* Estilos del menú de navegación */
 nav {
-    margin: 0px auto 0;
-    position: relative;
-    width: 500px;
-    height: 50px;
-    background-color: #2f5839;
-    border-radius: 10px;
-    font-size: 0;
-  }
+  position: fixed;
+  top: 0;
+  right: 0;
+  width: 40%;
+  height: 5%;
+  background-color: #2f5839;
+  border-radius: 10px;
+  padding: 10px;
+
+}
+
+/* Estilos de los enlaces del menú y efecto de animación */
   
-  nav a {
+nav a {
     line-height: 50px;
     height: 100%;
     font-size: 15px;
@@ -40,21 +58,13 @@ nav {
     border-radius: 8px;
   }
   
-  a:nth-child(1) {
-    width: 100px;
-  }
+  a:nth-child(1) {width: 100px;}
   
-  a:nth-child(2) {
-    width: 110px;
-  }
+  a:nth-child(2) {width: 110px;}
   
-  a:nth-child(3) {
-    width: 100px;
-  }
+  a:nth-child(3) {width: 100px;}
   
-  a:nth-child(4) {
-    width: 190px;
-  }
+  a:nth-child(4) {width: 180px;}
   
   nav .start-home,
   a:nth-child(1):hover~.animation {
@@ -67,62 +77,42 @@ nav {
   a:nth-child(2):hover~.animation {
     width: 110px;
     left: 100px;
-    background-color: #d81a05;
+    background-color: #01c79f;
+
   }
   
   nav .start-blog,
   a:nth-child(3):hover~.animation {
     width: 100px;
     left: 210px;
-    background-color: #0332cc;
+    background-color: #01c79f;
+
   }
   
   nav .start-portefolio,
   a:nth-child(4):hover~.animation {
     width: 160px;
     left: 330px;
-    background-color: #9b05d6;
+    background-color: #01c79f;
+
   }
+ 
+  @media only screen and (max-width: 600px) {
+    header {
+      padding: 5px;
+    }
   
-  /* menu */
+    header picture img {
+      padding-left: 1em;
+      width: 150px;
+    }
   
-  #menu ul {
-    list-style:none;
-    margin:0;
-    padding:0;
-   }
-   
-   /* items del menu */
-   
-   #menu ul li {
-    background-color:#2e518b;
-   }
-   
-   /* enlaces del menu */
-   
-   #menu ul a {
-    display:block;
-    color:#fff;
-    text-decoration:none;
-    font-weight:400;
-    font-size:15px;
-    padding:10px;
-    font-family:"HelveticaNeue", "Helvetica Neue", Helvetica, Arial, sans-serif;
-    text-transform:uppercase;
-    letter-spacing:1px;
-   }
-   
-   /* items del menu */
-   
-   #menu ul li {
-    position:relative;
-    float:left;
-    margin:0;
-    padding:0;
-   }
-   
-   /* efecto al pasar el ratón por los items del menu */
-   
-   #menu ul li:hover {
-    background:#5b78a7;
-   }
+    nav {
+      width: 60%;
+      padding-bottom: 4%;
+    }
+  
+    nav a {
+      font-size: 12px;
+    }
+  }
