--- a/assets/style.css
+++ b/assets/style.css
@@ -8,7 +8,7 @@ html {
 }
 
 body {
-  display: grid;
+  display: flex;
   flex-direction: wrap;
   flex-direction: column;
   position: relative;
@@ -19,26 +19,12 @@ body {
 main {
   height: 100%;
   position: static;
-  border: 0px solid rgb(0, 24, 238);
-  padding: 25px 20px 25px 20px ;
+  padding-top: 12em;
+
 }
 footer {
-  padding: 10;
+  padding: 50px;
   height: 100%;
-}
-
-header img {
-  align-items: center;
-  width: 300px;
-  height: 100px;
-  gap: 2rem;
-}
-
-header picture img {
-  align-items: center;
-  width:200px ;
-  height: auto;
-
 }
 
 h1 {
@@ -47,12 +33,14 @@ h1 {
   size: 130px;
   color: rgb(20, 119, 106);
   text-align: center;
+  
 }
 
 h2 {
+  text-align: center;
   font-family: "Pacifico", cursive;
   size: 30px;
-  color: rgb(76, 23, 146);
+
 }
 
 h3 {
@@ -65,49 +53,67 @@ h4 {
   font-family: "Courier New", Courier, monospace;
   size: 20;
   color: gray;
-}
-
-.objeto {
-  position: relative;
-  display: inline-block;
-  margin: 10px;
-  border: 1px solid #ccc;
-  padding: 10px;
-  width: 200px;
-  text-align: center;
-}
-
-.parrafo-oculto {
-  display: none;
-}
-
-.objeto:hover .parrafo-oculto {
-  display: grid;
-}
-
-p {
-  font-family: "arial", cursive;
-  size: 20;
-  color: gray;
-}
-
-.container-2 {
-  display: flex;
-  position: relative;
-  display: inline-block;
-  box-sizing: content-box;
-}
-
-picture {
   
-  align-items: center;
-  gap: 2rem;
-  height: 20px;
 }
+
+.container1 {
+  display: flex;
+  text-align: center; 
+  background-repeat: no-repeat;
+  background-size: cover;
+  background-image: url(https://img.freepik.com/free-vector/blue-fluid-background-frame_53876-99019.jpg?size=626&ext=jpg&ga=GA1.1.609444847.1699661775&semt=sph);
+}
+.nosotros p {
+  text-align: justify;
+  padding-top: 50px;
+  padding-right: 20px;
+  padding-left: 30px;
+  text-align: center;
+  font-size: 20px;
+  animation-duration: 7s;
+  animation-name: slidein;
+  animation-iteration-count: infinite;
+  animation-direction: alternate;
+}
+
+@keyframes slidein {
+  from {
+    margin-left: 100%;
+    width: 300%;
+  }
+
+  to {
+    margin-left: 0%;
+    width: 100%;
+  }
+}
+
+@keyframes slidein {
+  from {
+    margin-left: 100%;
+    width: 300%;
+  }
+
+  to {
+    margin-left: 0%;
+    width: 100%;
+  }
+}
+
 picture img {
   height: 230px;
   padding: 5px;
 }
+
+
+.imagen img {
+  width: 75%;
+  height: 300px;
+  border-radius: 40%;
+ 
+  
+}
+
 button{
   background-color: azure;
   border-bottom: 25px;
@@ -118,4 +124,24 @@ button{
 .container-video {
   display: -ms-flexbox;
   padding-inline: 20px;
+}
+
+@media only screen and (max-width: 600px) {
+  header {
+    padding: 5px;
+  }
+
+  header picture img {
+    padding-left: 1em;
+    width: 150px;
+  }
+
+  nav {
+    width: 60%;
+    padding-bottom: 4%;
+  }
+
+  nav a {
+    font-size: 12px;
+  }
 }
