--- a/assets/mascotas.css
+++ b/assets/mascotas.css
@@ -1,4 +1,4 @@
-
+@import url("https://fonts.googleapis.com/css2?family=Pacifico&family=Roboto:wght@100&display=swap");
 
 *,
 html {
@@ -7,30 +7,49 @@ html {
 }
 
 body {
+  display: flex;
+  flex-direction: wrap;
+
+  position: relative;
+  height: 100svh;
   box-sizing: border-box;
-  display: grid;
-  background-image: (359.8deg, rgba(252, 255, 222, 1) 2.2%, rgb(136, 201, 116) 99.3%);
-  
 
+  height: 100svh;
 }
-
 header {
-  text-align: center;
-  height: 100%;
-  position: sticky;
-  border: 1px solid red;
-  background-image: linear-gradient(359.8deg, rgba(252, 255, 222, 1) 2.2%, rgb(136, 201, 116) 99.3%);
+  background-image: url(https://img.freepik.com/free-vector/blue-fluid-background-frame_53876-99019.jpg?size=626&ext=jpg&ga=GA1.1.609444847.1699661775&semt=sph);
+  background-repeat: no-repeat;
+  background-size: cover;
+  padding: 1%;
+  position: fixed;
+  width: 100%;
+  display: flex;
 }
+
+header picture img {
+  padding-left: 10%;
+  width: 20%;
+  height: auto;
+  max-width: 100%;
+}
+
+
 
 .menu-vertical {
+  margin: 0em;
+  padding-top: 10em;
   position: fixed;
   width: 200px;
   height: 100svh;
+  font-family: "Pacifico", cursive;
+  size: 30px;
+  color: rgb(76, 23, 146);
 }
 
 .menu-vertical a {
+  font-family: "Pacifico", cursive;
   background-color: #eee;
-  color: black;
+  color: rgb(76, 23, 146);
   display: block;
   padding: 1em;
   text-decoration: none;
@@ -46,63 +65,69 @@ header {
 }
 
 main {
-  margin-left: 350px;
-  min-height: 100vh;
-  background-color: rgb(217, 246, 223) ;
+  display: flex;
+  margin-left: 20em;
+  height: 100%;
   text-align: center;
-}
-
-td img {
-    text-align: center;
-
-    border-radius: 40%;
-    width: 200px;
-    height: 200px;
-  
-}
-td p{
-  text-shadow: 2px 2px 4px  rgb(235.255.202);
-  text-align: left;
-  padding: 10px;
+  box-sizing: border-box;
+  padding-top: 10rem;
 }
 
 table {
   border-collapse: collapse;
-  padding: 35px;
   width: 100%;
+  max-width: 100vw;
+  margin-top: 2em;
+  margin-left:30%;
+  padding: 10px;
+  overflow-x: auto;
+
 }
+
+td {
+  padding: 10px;
+  text-align: center;
+  
+
+}
+td img {
+  text-align: center;
+  border-radius: 30%;
+  width: 100%;
+  height: auto;
+}
+
+td p {
+  text-shadow: 2px 2px 4px rgb(235.255.202);
+  text-align: left;
+  padding: 2em;
+}
+
+@keyframes fadeIn {
+  to {
+    opacity: 1; /* Al final de la animación, establecer la opacidad en 1 */
+  }
+}
+
+
 
 .hidden {
   display: none;
 }
 
+@media only screen and (max-width: 600px) {
+  header {
+    padding: 5px;
+  }
 
+  header picture img {
+    padding-left: 1em;
+    width: 150px;
+  }
 
-.imagen-con-texto {
-  position: relative;
-  transform-style: preserve-3d;
-  transition: transform 0.5s;
-}
-
-.imagen-con-texto:hover {
-  transform: rotateY(180deg);
-}
-
-.imagen-con-texto img,
-.imagen-con-texto .texto {
-  width: 100%;
-  height: 100%;
-  position: absolute;
-  backface-visibility: hidden;
-}
-
-.imagen-con-texto .texto {
-  transform: rotateY(180deg);
-  text-align: center;
-  padding: 20px;
-  box-sizing: border-box;
-  background-color: rgba(0, 0, 0, 0.7);
-  color: #fff;
+  td {
+    font-size: 12px; /* Ajustar el tamaño del texto para pantallas más pequeñas */
+  }
 }
 
 
